// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`generates a template registry at a custom path 1`] = `
"// components
import type Bar from "app/components/bar";
import type FooBar from "app/components/foo-bar";
import type Foo from "app/components/foo";
import type FooBar2 from "app/components/foo/bar";

// helpers
import type Foo2 from "app/helpers/foo";

// modifiers
import type Foo3 from "app/modifiers/foo";

export default interface AppRegistry {
  // components
  bar: typeof Bar;
  Bar: typeof Bar;
  "foo-bar": typeof FooBar;
  FooBar: typeof FooBar;
  foo: typeof Foo;
  Foo: typeof Foo;
  "foo/bar": typeof FooBar2;
  "Foo::Bar": typeof FooBar2;

  // helpers
  foo: typeof Foo2;

  // modifiers
  foo: typeof Foo3;
}
"
`;

exports[`generates a template registry for a v1 addon 1`] = `
"// components
import type Bar from "v1-addon/components/bar";
import type FooBar from "v1-addon/components/foo-bar";
import type Foo from "v1-addon/components/foo";
import type FooBar2 from "v1-addon/components/foo/bar";

// helpers
import type Foo2 from "v1-addon/helpers/foo";

// modifiers
import type Foo3 from "v1-addon/modifiers/foo";

export default interface V1AddonRegistry {
  // components
  bar: typeof Bar;
  Bar: typeof Bar;
  "foo-bar": typeof FooBar;
  FooBar: typeof FooBar;
  foo: typeof Foo;
  Foo: typeof Foo;
  "foo/bar": typeof FooBar2;
  "Foo::Bar": typeof FooBar2;

  // helpers
  foo: typeof Foo2;

  // modifiers
  foo: typeof Foo3;
}
"
`;

exports[`generates a template registry for a v2 addon 1`] = `
"// components
import type Bar from "./components/bar.ts";
import type FooBar from "./components/foo-bar.gts";
import type Foo from "./components/foo.ts";
import type FooBar2 from "./components/foo/bar.ts";

// helpers
import type Foo2 from "./helpers/foo.ts";

// modifiers
import type Foo3 from "./modifiers/foo.ts";

export default interface V2AddonRegistry {
  // components
  bar: typeof Bar;
  Bar: typeof Bar;
  "foo-bar": typeof FooBar;
  FooBar: typeof FooBar;
  foo: typeof Foo;
  Foo: typeof Foo;
  "foo/bar": typeof FooBar2;
  "Foo::Bar": typeof FooBar2;

  // helpers
  foo: typeof Foo2;

  // modifiers
  foo: typeof Foo3;
}
"
`;

exports[`generates a template registry for an app 1`] = `
"// components
import type Bar from "app/components/bar";
import type FooBar from "app/components/foo-bar";
import type Foo from "app/components/foo";
import type FooBar2 from "app/components/foo/bar";

// helpers
import type Foo2 from "app/helpers/foo";

// modifiers
import type Foo3 from "app/modifiers/foo";

export default interface AppRegistry {
  // components
  bar: typeof Bar;
  Bar: typeof Bar;
  "foo-bar": typeof FooBar;
  FooBar: typeof FooBar;
  foo: typeof Foo;
  Foo: typeof Foo;
  "foo/bar": typeof FooBar2;
  "Foo::Bar": typeof FooBar2;

  // helpers
  foo: typeof Foo2;

  // modifiers
  foo: typeof Foo3;
}
"
`;
